<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/developer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/developer"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:onClick="calculate"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num2" />

    <EditText
        android:id="@+id/num1"
        android:layout_width="72dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/base" />

    <EditText
        android:id="@+id/num2"
        android:layout_width="72dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/operator"
        app:layout_constraintTop_toBottomOf="@+id/base" />

    <Spinner
        android:id="@+id/base"
        android:layout_width="72dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="44dp"
        android:entries="@array/base"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/developer" />

    <Spinner
        android:id="@+id/operator"
        android:layout_width="72dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:entries="@array/operator"
        app:layout_constraintStart_toEndOf="@+id/num1"
        app:layout_constraintTop_toBottomOf="@+id/base" />

    <TextView
        android:id="@+id/equal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/equal"
        app:layout_constraintBaseline_toBaselineOf="@+id/num2"
        app:layout_constraintStart_toEndOf="@+id/num2" />

    <EditText
        android:id="@+id/result"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/num2"
        app:layout_constraintStart_toEndOf="@+id/equal" />

    <EditText
        android:id="@+id/num3"
        android:layout_width="72dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculate" />

    <TextView
        android:id="@+id/operator1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:text="@string/operator"
        app:layout_constraintBaseline_toBaselineOf="@+id/num3"
        app:layout_constraintStart_toEndOf="@+id/num3" />

    <EditText
        android:id="@+id/num4"
        android:layout_width="72dp"
        android:layout_height="48dp"
        android:layout_marginStart="44dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/num3"
        app:layout_constraintStart_toEndOf="@+id/operator1" />

    <TextView
        android:id="@+id/equal1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/equal"
        app:layout_constraintBaseline_toBaselineOf="@+id/num4"
        app:layout_constraintStart_toEndOf="@+id/num4" />

    <EditText
        android:id="@+id/result1"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/equal1"
        app:layout_constraintStart_toEndOf="@+id/equal1" />

    <TextView
        android:id="@+id/System10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="10dp"
        android:text="@string/system10"
        app:layout_constraintBottom_toTopOf="@+id/num3"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/base1"
        android:layout_width="72dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:entries="@array/base"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num3" />

    <EditText
        android:id="@+id/num5"
        android:layout_width="72dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/base1" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:text="@string/operator"
        app:layout_constraintBaseline_toBaselineOf="@+id/num5"
        app:layout_constraintStart_toEndOf="@+id/num5" />

    <EditText
        android:id="@+id/num6"
        android:layout_width="72dp"
        android:layout_height="48dp"
        android:layout_marginStart="44dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/num5"
        app:layout_constraintStart_toEndOf="@+id/textView4" />

    <TextView
        android:id="@+id/equal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/equal"
        app:layout_constraintBaseline_toBaselineOf="@+id/num6"
        app:layout_constraintStart_toEndOf="@+id/num6" />

    <EditText
        android:id="@+id/result2"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/num6"
        app:layout_constraintStart_toEndOf="@+id/equal2" />

</androidx.constraintlayout.widget.ConstraintLayout>